welcome/app/K8S/manifests/app/fe/deployment.yaml
# K8S Deployment manifest for the Frontend service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: fefaker
        image: yanivomc/fefaker:latest
        ports:
        - containerPort: 8000
        # Set Always pull 
        imagePullPolicy: Always
        # Set restartPolicy: Always
        restartPolicy: Always
