welcome/app/K8S/manifests/app/fe/service.yaml
# ClusterIP service for the frontend
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  labels:
    app: fe
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics/"
spec:
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  # Change the type to LoadBalancer OR NodePort if you want to expose the service outside the cluster without Istio / Ingress controller
  type: ClusterIP
