welcome/app/K8S/manifests/app/fe/istioGatewayAndRoute.yaml
# Create an istio gateway and route for the frontend service
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: fe-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: fe-route
spec:
  hosts:
  - "*"
  gateways:
  - fe-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fe-service
        port:
          number: 80
